--- a/she_learns/src/App.css
+++ b/she_learns/src/App.css
@@ -20,15 +20,13 @@ nav{
 .nav-link-signin, .nav-link-signup{
     text-decoration: none;
     font-size: 18px;
-    padding:0.5rem;
+    padding:0.5rem 1rem;
     font-family: -apple-system, BlinkMacSystemFont,'Roboto',
     sans-serif;
     color: #282c34;
     vertical-align: middle;
     display: -webkit-inline-flex;
-    justify-content: flex-end;
-   
-
+    /* justify-content: flex-end; */
 }
 
 .nav-link-signup{
@@ -45,39 +43,4 @@ nav{
     pointer-events: visible;
     vertical-align: middle;
 
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #E7D5EF;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
