--- a/she_learns/src/pages/CreateUser/CreateUser.css
+++ b/she_learns/src/pages/CreateUser/CreateUser.css
@@ -1,38 +1,56 @@
 .CreateUser {
-  text-align: center;
-}
-
-.CreateUser-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .CreateUser-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.CreateUser-header {
-  background-color: #E7D5EF;;
+  background-color: #E7D5EF;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  flex-direction: column;
+  font-family: -apple-system, BlinkMacSystemFont,'Roboto',
+
+}
+
+.CreateUser-body {
+  text-align: center;
+  width: 400px;
+  height: 550px;
+  flex-shrink: 0;
+  background-color: white;
+  padding:3rem;
+  border-radius: 50px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   color: #282c34;
 }
 
-.CreateUser-link {
-  color: #61dafb;
+h2{
+  font-size: 30px;
 }
 
-@keyframes CreateUser-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-input{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+  text-align: left;
+  font-size: 15px;
+  font-weight: 700;
+}
+
+.input-box{
+  border-radius: 20px;
+  border: none;
+  background: #D9D9D9;
+  height: 35px;
+  text-indent: 10px;
+  margin-top: 5px;
+}
+
+.submit-button{
+  background-color: #D69DEF;
+  border:none;
+  border-radius: 50px;
+  padding:10px 30px;
+  font-size: 18px;
+  font-weight: 400;
+  display: flex;
+  margin-left: auto;
+  margin-top: 20px;
 }
