--- a/she_learns/src/App.css
+++ b/she_learns/src/App.css
@@ -17,7 +17,7 @@ nav{
     /* display: inline-block; */
 }
 
-.nav-link-signin, .nav-link-signup{
+.nav-link-signin, .nav-link-signup, .nav-link-user, .nav-link-upload{
     text-decoration: none;
     font-size: 18px;
     padding:0.5rem 1rem;
