--- a/she_learns/src/pages/User/User.css
+++ b/she_learns/src/pages/User/User.css
@@ -2,19 +2,8 @@
   text-align: center;
 }
 
-.User-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .User-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .User-header {
-  background-color: #282c34;
+  background-color: #E7D5EF;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,8 +13,129 @@
   color: white;
 }
 
+
+.User-profile{
+  background-color: white;
+  width: 95%;
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+  border-radius: 5px;
+  color: black;
+  
+}
+
+.User-container{
+  width: 90%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.User-info{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin-bottom: 20px;
+}
+
+.User-items{
+}
+#User-upload-area{
+ height: 80%;
+ min-width: 20vh;
+}
+.User-uploads{
+  border: 1px solid #D9D9D9;
+  border-radius: 5px;
+  display: grid;
+  place-items: center;
+  height: 80%;
+  max-width: 100%;
+}
+
+@media (max-width: 768px) {
+  .User-uploads {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+.User-uploads-details{
+  color: #808080;
+}
+.User-upload-btn{
+  height: 30px;
+  width: 100px;
+  background-color: #73a0b4;
+  border: none;
+  color: white;
+  border-radius: 5px;
+  font-weight: bold;
+  cursor: pointer;
+}
+.User-upload-btn:active{
+  background-color: #87adbf;
+}
+.User-upload-btn-area{
+  display: flex;
+  align-items: center;
+}
+.User-upload-header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+@media (max-width: 768px) {
+  .User-upload-header {
+    display: flex; /* Stacks items vertically on smaller screens */
+    align-items: center; /* Center items horizontally and vertically on smaller screens */
+
+  }
+}
+.picture{
+  width: 100px;
+  margin: 20px 20px 20px 0px;
+}
+
+.User-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+.User-bio{
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.User-bio-item{
+
+}
+
+#User-name{
+  font-weight: bold;
+}
+
+#User-detail{
+  font-size: small;
+  color: #808080;
+}
+
+.User-upload-title{
+  font-weight: bold;
+  text-align: left;
+}
+@media (prefers-reduced-motion: no-preference) {
+  .User-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
 .User-link {
-  color: #61dafb;
+
 }
 
 @keyframes App-logo-spin {
