--- a/she_learns/src/pages/Main/Main.css
+++ b/she_learns/src/pages/Main/Main.css
@@ -1,19 +1,11 @@
 .Main {
   text-align: center;
-}
-
-.Main-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .Main-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.Main-body {
+ }
+ 
+ 
+ 
+ 
+ .Main-body {
   background-color: #E7D5EF;
   min-height: 100vh;
   display: flex;
@@ -22,17 +14,55 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: #282c34;
+ }
+ 
+ 
+ .form-questions {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 50px;
+  text-align: left;
+  font-size: 60px;
+  font-weight: 800;
+  font-family: 'Roboto', sans-serif;
+  width: 1350px;
+  height: 78px;
+  background-color: #6C5B5B;
+  border-radius: 20px;
+  padding: 10px;
+  color: #BCD1DB;
+ }
+ 
+ 
+ .form-answers {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px; /* Adjust the margin-top value to increase the space */
+  text-align: left;
+  font-size: 60px;
+  font-weight: 800;
+ font-family: 'Roboto', sans-serif;
+ width: 1350px;
+ height: 300px;
+ left: 81px;
+ background-color: #6C5B5B;
+ border-radius: 10px;
+ padding: 10px;
+ color: #BCD1DB;
 }
 
-.Main-link {
-  color: #61dafb;
+
+.submit-buttonM {
+ position: absolute;
+ left: 1325px;
+ top: 750px;
+ width: 116px;
+ height: 107px;
+ background-image: url('BsPlusCircle.png');
+ background-size: contain;
+ background-color: transparent;
+ border: none;
+ cursor: pointer;
 }
 
-@keyframes Main-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+ 
