--- a/she_learns/src/pages/CreateUser/CreateUser.css
+++ b/she_learns/src/pages/CreateUser/CreateUser.css
@@ -1,56 +1,63 @@
 .CreateUser {
-  background-color: #E7D5EF;
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  font-family: -apple-system, BlinkMacSystemFont,'Roboto',
-
-}
-
-.CreateUser-body {
-  text-align: center;
-  width: 400px;
-  height: 550px;
-  flex-shrink: 0;
-  background-color: white;
-  padding:3rem;
-  border-radius: 50px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  color: #282c34;
-}
-
-h2{
-  font-size: 30px;
-}
-
-.form-input{
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 10px;
-  text-align: left;
-  font-size: 15px;
-  font-weight: 700;
-}
-
-.input-box{
-  border-radius: 20px;
-  border: none;
-  background: #D9D9D9;
-  height: 35px;
-  text-indent: 10px;
-  margin-top: 5px;
-}
-
-.submit-button{
-  background-color: #D69DEF;
-  border:none;
-  border-radius: 50px;
-  padding:10px 30px;
-  font-size: 18px;
-  font-weight: 400;
-  display: flex;
-  margin-left: auto;
-  margin-top: 20px;
-}
+    background-color: #E7D5EF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-family: -apple-system, BlinkMacSystemFont,'Roboto',
+  
+  }
+  
+  .CreateUser-body {
+    text-align: center;
+    width: 400px;
+    height: auto;
+    flex-shrink: 0;
+    background-color: white;
+    padding:3rem;
+    border-radius: 50px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    color: #282c34;
+  }
+  
+  h2{
+    font-size: 30px;
+  }
+  
+  .cu-form-input{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+    text-align: left;
+    font-size: 15px;
+    font-weight: 700;
+  }
+  
+  .cu-input-box{
+    border-radius: 20px;
+    border: none;
+    background: #D9D9D9;
+    height: 35px;
+    text-indent: 10px;
+    margin-top: 5px;
+  }
+  
+  .cu-submit-button{
+    background-color: #D69DEF;
+    border:none;
+    border-radius: 50px;
+    padding:10px 30px;
+    font-size: 18px;
+    font-weight: 400;
+    display: flex;
+    margin-left: auto;
+    margin-top: 40px;
+  }
+  
+  .cu-submit-button:hover{
+    background-color: black;
+    color: #D69DEF;
+  }
+  
+  
+  
