--- a/she_learns/src/App.css
+++ b/she_learns/src/App.css
@@ -48,7 +48,6 @@ body{
   justify-content: center;
 }
 
-
 /* input upload */
 .upload-container-parent{
   display: flex;
@@ -72,7 +71,7 @@ body{
 
 .upload-btn{
   font-size: 1.4rem;
-  border: 1px solid;
+  border: 1px solid grey;
   border-radius: 35px;
   margin: 20px 5px;
   padding-left: 1.6rem;
